Fix #123: Label font color on Safari is now correct.

--- a/style/annotations/annotate.less
+++ b/style/annotations/annotate.less
@@ -125,6 +125,7 @@
                     }
 
                     .item-abbreviation{
+                        color: black;
                         float:left;
                         font-weight: bold;
                         margin: 0px;
@@ -141,6 +142,7 @@
                     }
 
                     .item-value{
+                        color: black;
                         float:left;
                         padding: @labelPadding;
                         display: inline-block;
